--- a/templates/index.html
+++ b/templates/index.html
@@ -10,12 +10,12 @@
     <table style="width:100%">
         <tr>
             <form action="{{ url_for("index")}}" method="post">
-                <input type="submit" value="left" name="0">
+                <input type="submit" value="turn" name="0">
             </form>
         </tr>
         <tr>
             <form action="{{ url_for("index")}}" method="post">
-                <input type="submit" value="right" name="0">
+                <input type="submit" value="straight" name="0">
             </form>
         </tr>
     </table>
@@ -25,12 +25,12 @@
     <table style="width:100%">
         <tr>
             <form action="{{ url_for("index")}}" method="post">
-                <input type="submit" value="left" name="1">
+                <input type="submit" value="turn" name="1">
             </form>
         </tr>
         <tr>
             <form action="{{ url_for("index")}}" method="post">
-                <input type="submit" value="right" name="1">
+                <input type="submit" value="straight" name="1">
             </form>
         </tr>
     </table>
