--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <body>
-    <h1>Train Switches</h1>
+    <h1>Train Switches  ({{ train_switches.__len__() }})</h1>
     <hr />
     <!-- Loop through all switches and display controls -->
     {% for key, value in train_switches.items() %}
