--- a/templates/log.html
+++ b/templates/log.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <body>
-    <h1>Logging File</h1>
+    <h1>Logging Page</h1>
     <br/>
     <textarea id="log" name="log" rows="25" cols="125" readonly="True">
         {{ log }}
