--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,8 @@
     <hr />
     {% endfor %}
     <h2>Quick Links</h2>
+    <a href="{{ url_for('about') }}">View About</a>
+    <br>
     <a href="{{ url_for('log') }}">View Logs</a>
 
     <br>
