--- a/templates/index.html
+++ b/templates/index.html
@@ -24,11 +24,7 @@
     <a href="{{ url_for('about') }}">View About</a>
     <br>
     <a href="{{ url_for('log') }}">View Logs</a>
-
     <br>
-    <h2>Trains!</h2>
-    <img src="/static/trains.jpeg" alt="trains" width="400" height="300" title="Lionel's Granite Quarry Run">
-    <br>
-    <a href="https://www.lionelstore.com/LionelStore%20Product%20Images/2022010-01.jpg">Photo Credit Lionel</a>
+    <a href="{{ url_for('beast') }}">View Sexy Beast</a>
 </body>
 </html>
