refactor config_load

--- a/templates/forms.html
+++ b/templates/forms.html
@@ -72,7 +72,7 @@ function submitForm(){
             </button>
         </td>
         <td>
-            <form action="{{url_for("config")}}" method="post" id='add'>
+            <form action="{{url_for("config_load")}}" method="post" id='add'>
                 <select name="type">
                     <option value="relay">Relay</option>
                     <option value="servo">Servo</option>
