--- a/templates/beast.html
+++ b/templates/beast.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 <body>
-<h1>Sexy Beast!</h1>
+<h1>Beast!</h1>
 <img src="/static/trains.jpeg" alt="trains" width="800" height="600" title="Lionel's Granite Quarry Run">
 <br>
 <audio controls autoplay>
