add_shuffle_buttons

--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,12 @@
 body {
 	background: beige;
 	color: black;
+	font-size: 100%;
+}
+
+.bolded { 
+	font-weight: bold; 
+	font-size: 1.875em;
 }
 
 input.unclicked {
