--- a/templates/forms.html
+++ b/templates/forms.html
@@ -2,58 +2,76 @@
 Active Devices: {{ devices.__len__() }}
 {%- endmacro %}
 
-{% macro display(s) -%}
-<pre><p>{{ s }}</p></pre>
+{% macro display(i, s) -%}
 <table>
-    <tr>
-        <!-- Show submit buttons that change with the switch property -->
-        <form action="{{url_for("index")}}" method="post">
-            {% if s.state == "turn": %}
-            <input type="submit" value="Turn" name="{{ s.pin }}" class="clicked">
-            {% else %}
-            <input type="submit" value="Turn" name="{{ s.pin }}" class="unclicked">
-            {% endif %}
-        </form>
-    </tr>
-    <tr>
-        <form action="{{url_for("index")}}" method="post">
-            {% if s.state == "straight": %}
-            <input type="submit" value="Straight" name="{{ s.pin }}" class="clicked">
-            {% else %}
-            <input type="submit" value="Straight" name="{{ s.pin }}" class="unclicked">
-            {% endif %}
-        </form>
-    </tr>
-    <tr>
-        <!-- Show an indicator light that matches the physical train switch -->
-        <!-- Image credit: https://en.wikipedia.org/wiki/Bela_Ski_Resort -->
-        [
-        {% if s.state == "straight": %}
-        <img src="/static/green.png" alt="straight" width="16" height="16" title="Straight">
-        {% elif s.state == "turn" %}
-        <img src="/static/red.png" alt="turn" width="16" height="16" title="Turn">
-        {% else: %}
-        <img src="/static/black.png" alt="uncontrolled" width="16" height="16" title="Uncontrolled">
-        {% endif %}
-        ]
-    </tr>
+    <td>
+        <span class="bolded">{{ i }}</span>
+    </td>
+    <td>
+        <pre><p>{{ s }}</p></pre>
+        <table>
+            <tr>
+                <!-- Show submit buttons that change with the switch property -->
+                <form action="{{url_for("index")}}" method="post">
+                    {% if s.state == "turn": %}
+                    <input type="submit" value="Turn" name="{{ s.pin }}" class="clicked">
+                    {% else %}
+                    <input type="submit" value="Turn" name="{{ s.pin }}" class="unclicked">
+                    {% endif %}
+                </form>
+            </tr>
+            <tr>
+                <form action="{{url_for("index")}}" method="post">
+                    {% if s.state == "straight": %}
+                    <input type="submit" value="Straight" name="{{ s.pin }}" class="clicked">
+                    {% else %}
+                    <input type="submit" value="Straight" name="{{ s.pin }}" class="unclicked">
+                    {% endif %}
+                </form>
+            </tr>
+            <tr>
+                <!-- Show an indicator light that matches the physical train switch -->
+                <!-- Image credit: https://en.wikipedia.org/wiki/Bela_Ski_Resort -->
+                [
+                {% if s.state == "straight": %}
+                <img src="/static/green.png" alt="straight" width="16" height="16" title="Straight">
+                {% elif s.state == "turn" %}
+                <img src="/static/red.png" alt="turn" width="16" height="16" title="Turn">
+                {% else: %}
+                <img src="/static/black.png" alt="uncontrolled" width="16" height="16" title="Uncontrolled">
+                {% endif %}
+                ]
+            </tr>
+        </table>
+    </td>
 </table>
 {%- endmacro %}
 
 {% macro active(s) -%}
 <table>
-    <tr>
-        <td>
-            <form action="{{ url_for("config_delete", pins=s.pin_string) }}" method="post">
-                <button class="btn" value="delete" name="{{ s.pin }}">
-                    <i class="fa fa-close"></i>
-                </button>
-            </form> 
-        </td>
-        <td>
-            <pre>{{ s }}</pre>
-        </td>
-    </tr>
+    <td>
+        <form action="{{ url_for("config_delete", pins=s.pin_string) }}" method="post">
+            <button class="btn" value="delete" name="{{ s.pin }}">
+                <i class="fa fa-close"></i>
+            </button>
+        </form> 
+    </td>
+    <td>
+        <pre>{{ s }}</pre>
+    </td>
+    <td>
+        <form action="{{ url_for("config_shuffle", pins=s.pin_string, direction="up") }}" method="post">
+            <button>
+                <i class="fa fa-chevron-circle-up"></i>
+            </button>
+        </form>
+
+        <form action="{{ url_for("config_shuffle", pins=s.pin_string, direction="down") }}" method="post">
+            <button>
+                <i class="fa fa-chevron-circle-down"></i>
+            </button>
+        </form>
+    </td>
 </table>
 {%- endmacro %}
 
