--- a/templates/log.html
+++ b/templates/log.html
@@ -10,10 +10,9 @@
 <!-- <meta http-equiv="refresh" content="3"> -->
 <body>
     <a href="{{ url_for('index') }}">Back to Home</a>
-    <h2>Logs</h2>
-    <textarea id="log" name="log" rows="25" cols="100" readonly="True">
-        {{ log }}
-    </textarea>
+    <pre>{{ log|safe }}</pre>
+    
+    <!-- <span class="logs"></span> -->
     <!-- <h2>BLE Logs</h2>
     <textarea id="ble_log" name="ble_log" rows="10" cols="100" readonly="True">
         {{ ble_log }}
