--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,12 @@ body {
 	font-family: Verdana, sans-serif;
 }
 
+pre {
+	white-space: pre-wrap;
+	word-wrap: break-word;
+	text-align: justify;
+}
+  
 .bolded { 
 	font-weight: bold; 
 	font-size: 2em;
@@ -21,10 +27,6 @@ input.clicked {
 	color: white;
 }
 
-textarea {
-	height: auto;
-  }
-
 table {
 	width:100%;
 }
@@ -36,9 +38,9 @@ table {
 	padding: 12px 16px; /* Some padding */
 	font-size: 16px; /* Set a font size */
 	cursor: pointer; /* Mouse pointer on hover */
-  }
+}
   
-  /* Darker background on mouse-over */
-  .btn:hover {
+/* Darker background on mouse-over */
+.btn:hover {
 	background-color: RoyalBlue;
-  }
+}
