--- a/templates/forms.html
+++ b/templates/forms.html
@@ -94,6 +94,7 @@ function submitForm(){
                 <select name="type">
                     <option value="relay">Relay</option>
                     <option value="servo">Servo</option>
+		    <option value="spur">Spur</option>
                 </select>
         </td>
         <td>
